p3/src/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  selector:
    app: playground
  ports:
  - port: 8888
    targetPort: 8888
  type: ClusterIP
